@@ -276,7 +276,7 @@ summary.lm <- function (object, correlation = FALSE, symbolic.cor = FALSE, ...)
             r <- sqrt(w) * r
         }
         resvar <- rss/rdf
-        ans <- z[c("call", "terms")]
+        ans <- z[c("call", "terms", "weights")]
         class(ans) <- "summary.lm"
         ans$aliased <- is.na(coef(object))  # used in print method
         ans$residuals <- r
@@ -318,7 +318,7 @@ summary.lm <- function (object, correlation = FALSE, symbolic.cor = FALSE, ...)
     se <- sqrt(diag(R) * resvar)
     est <- z$coefficients[Qr$pivot[p1]]
     tval <- est/se
-    ans <- z[c("call", "terms")]
+    ans <- z[c("call", "terms", "weights")]
     ans$residuals <- r
     ans$coefficients <-
 	cbind(est, se, tval, 2*pt(abs(tval), rdf, lower.tail = FALSE))
@@ -357,7 +357,7 @@ print.summary.lm <-
     resid <- x$residuals
     df <- x$df
     rdf <- df[2L]
-    cat(if(!is.null(x$w) && diff(range(x$w))) "Weighted ",
+    cat(if(!is.null(x$weights) && diff(range(x$weights))) "Weighted ",
         "Residuals:\n", sep="")
     if (rdf > 5L) {
 	nam <- c("Min", "1Q", "Median", "3Q", "Max")
