@@ -2610,3 +2610,13 @@ try(smooth.spline(aa, seq_along(aa)))
 fit <- smooth.spline(aa, seq_along(aa), tol = 0.1)
 # actual output is too unstable to diff.
 ## Better message from R 2.14.2
+
+
+## PR#14840
+d <- data.frame(x = 1:9,
+                y = 1:9 + 0.1*c(1, 2, -1, 0, 1, 1000, 0, 1, -1),
+                w = c(1, 0.5, 2, 1, 2, 0, 1, 2, 1))
+fit <- lm(y ~ x, data=d, weights=w)
+summary(fit)
+## issue is how the 5-number summary is labelled
+## (also seem in example(case.names))
